--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       scene.addNode(arObject);
 
       // Replace 3D models here
-      let flower = new Gltf2Node({url: 'media/gltf/viking-room/vikings.gltf'});
+      let flower = new Gltf2Node({url: 'media/gltf/cave/cave.gltf'});
       arObject.addNode(flower);
 
       let reticle = new Gltf2Node({url: 'media/gltf/reticle/reticle.gltf'});
